--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Login And Register</title>
+    <meta name="viewport" content="with=device-width, initial-scale=1.0">
+    <title>MonoSecur By DarkSide</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
