--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
-    <title>MonoSecur By DarkSide</title>
+    <title>MonoSecur By DarkSide.</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
