--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <section class="header">
+    
+    </section>
   </body>
 </html>
