--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="with=device-width, initial-scale=1.0">
-    <title>MonoSecur By DarkSide.</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <section class="header">
+<head>
+  <meta name="viewport" content="with=device-width, initial-scale=1.0">
+  <title>MonoSecur</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+  <section class="header">
     
-    </section>
-  </body>
+  </section>
 </html>
