--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
   <section class="header">
-    
+    <nav>
+      <a href="index.html"><img src="images/monosecurlogo.png"></a>
+      <div class="nav-links">
+        <ul>
+          <li><a href="">HOME</a></li>
+          <li><a href="">Passer Commande</a></li>
+          <li><a href="">SUPPORT</a></li>
+        </ul>
+      </div>
+    </nav>
   </section>
 </html>
