--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
   <title>MonoSecur</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
   <section class="header">
     <nav>
