--- a/index.html
+++ b/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
+<body>
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
   <title>MonoSecur</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/a7819a9eea.js" crossorigin="anonymous"></script>
 </head>
   <section class="header">
     <nav>
       <a href="index.html"><img src="images/monosecurlogo.png"></a>
-      <div class="nav-links">
+      <div class="nav-links" id="navLinks">
+        <i class="fa-sharp fa-solid fa-xmark" onclick="HideMenu()"></i>
         <ul>
           <li><a href="">HOME</a></li>
           <li><a href="">Passer Commande</a></li>
           <li><a href="">SUPPORT</a></li>
         </ul>
       </div>
+      <i class="fa-sharp fa-solid fa-bars" onclick="ShowMenu()"></i>
     </nav>
+
+<div class="text-box">
+  <h1>Mono Secur</h1>
+  <p>Service Provided by Dark Side. Service proposer par Dark Side.</p>
+  <a href="https://monolithservers.com" class="hero-btn">Acces to Monolith official website. Acces au site officiel de Monolith.</a>
+</div>
+
   </section>
+<!----Javascript for menu buttons---->
+<script>
+    var navLinks = document.getElementById("navLinks")
+  function ShowMenu(){
+    navLinks.style.right = "0";
+  }
+  function HideMenu(){
+    navLinks.style.right = "-200px";
+  }
+</script>
+
+</body>
 </html>
