--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body>
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
-  <title>MonoSecur</title>
+  <title class="indextitle">MonoSecur</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a7819a9eea.js" crossorigin="anonymous"></script>
 </head>
+<body>
   <section class="header">
     <nav>
       <a href="index.html"><img src="images/monosecurlogo.png"></a>
+      <i class="fa-solid fa-hexagon-xmark"></i>
       <div class="nav-links" id="navLinks">
-        <i class="fa-sharp fa-solid fa-xmark" onclick="HideMenu()"></i>
+        <i class="fa-sharp fa-xmark" onclick="HideMenu()"></i>
         <ul>
           <li><a href="">HOME</a></li>
-          <li><a href="">Passer Commande</a></li>
+          <li><a href="registration.html">S'identifier</a></li>
           <li><a href="">SUPPORT</a></li>
         </ul>
       </div>
-      <i class="fa-sharp fa-solid fa-bars" onclick="ShowMenu()"></i>
+      <i class="fa-sharp fa-bars" onclick="ShowMenu()"></i>
     </nav>
 
 <div class="text-box">
   <h1>Mono Secur</h1>
-  <p>Service Provided by Dark Side. Service proposer par Dark Side.</p>
+  <p>Service Provided by Dark Side.<br>proposer par Dark Side.</p>
   <a href="https://monolithservers.com" class="hero-btn">Acces to Monolith official website. Acces au site officiel de Monolith.</a>
 </div>
 
   </section>
+
 <!----Javascript for menu buttons---->
 <script>
     var navLinks = document.getElementById("navLinks")
