--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="text-box">
   <h1>Mono Secur</h1>
-  <p>Service Provided by Dark Side.<br>proposer par Dark Side.</p>
+  <p>Service Provided by Dark Side.<br>Service proposer par Dark Side.</p>
   <a href="https://monolithservers.com" class="hero-btn">Acces to Monolith official website. Acces au site officiel de Monolith.</a>
 </div>
 
