--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section class="header">
     <nav>
       <a href="index.html"><img src="images/monosecurlogo.png"></a>
-      <i class="fa-solid fa-hexagon-xmark"></i>
+      <img src="images/xmark.png" class="phone-logo">
       <div class="nav-links" id="navLinks">
         <i class="fa-sharp fa-xmark" onclick="HideMenu()"></i>
         <ul>
@@ -27,7 +27,8 @@
 
 <div class="text-box">
   <h1>Mono Secur</h1>
-  <p>Service Provided by Dark Side.<br>Service proposer par Dark Side.</p>
+  <p class="index-text">Service Provided by Dark Side.<br>Service proposer par Dark Side.</p>
+  <p class="phone-text">Sorry but this website don't work on you'r web browser or device.<br>désolé mais ce site ne fonctionne pas sur votre navigateur internet ou votre appareil.</p>
   <a href="https://monolithservers.com" class="hero-btn">Acces to Monolith official website. Acces au site officiel de Monolith.</a>
 </div>
 
