--- a/registration.html
+++ b/registration.html
@@ -3,11 +3,52 @@
 <head>
   <title>Register</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/a7819a9eea.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="hero">
-    <div class="form-box"></div>
+    
+    <div class="form-box">
+      <div class="button-box">
+        <div id="btn"></div>
+        <button type="button" class="toggle-btn" onclick="loginSide()">Log In</button>
+        <button type="button" class="toggle-btn" onclick="registerSide()">Register</button>
+      </div>
+      <div class="social-icons">
+      
+      </div>
+      <form id="login" class="input-group">
+        <input type="text" class="input-field" placeholder="User Id">
+        <input type="text" class="input-field" placeholder="Enter Password">
+        <input type="checkbox" class="check-box"><span>Remember Password</span>
+        <button type="submit" class="submit-btn">Login</button>
+      </form>
+      <form id="register" class="input-group">
+        <input type="text" class="input-field" placeholder="User Id">
+        <input type="email" class="input-field" placeholder="Email Id">
+        <input type="text" class="input-field" placeholder="Enter Password">
+        <input type="checkbox" class="check-box">I agree to<span><a href="">terms of conditions</a></span>
+        <button type="submit" class="submit-btn">Register</button>
+      </form>
+    </div>
   </div>
 
+    <script>
+      var x = document.getElementById("login");
+      var y = document.getElementById("register");
+      var z = document.getElementById("btn");
+
+      function registerSide(){
+        x.style.left = "-400px";
+        y.style.left = "50px";
+        z.style.left = "110px";
+      }
+
+      function loginSide(){
+        x.style.left = "50px";
+        y.style.left = "450px";
+        z.style.left = "0";
+      }
+    </script>
 </body>
 </html>
