added new monosecur logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <section class="header">
     <nav>
-      <a href="index.html"><img src="images/monosecurlogo.png"></a>
+      <a href="index.html"><img src="images/MonoSecurLogoWText.png"></a>
       <img src="images/xmark.png" class="phone-logo">
       <div class="nav-links" id="navLinks">
         <i class="fa-sharp fa-xmark" onclick="HideMenu()"></i>
