--- a/registration.html
+++ b/registration.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="hero">
-    
+    <a href="index.html"><img src="images/MonoSecurLogoWText.png"></a>
     <div class="form-box">
       <div class="button-box">
         <div id="btn"></div>
