--- a/registration.html
+++ b/registration.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Register</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSStyle/style.css">
   <script src="https://kit.fontawesome.com/a7819a9eea.js" crossorigin="anonymous"></script>
 </head>
 <body>
