--- a/registration.html
+++ b/registration.html
@@ -4,9 +4,20 @@
   <title>Register</title>
   <link rel="stylesheet" href="CSStyle/style.css">
   <script src="https://kit.fontawesome.com/a7819a9eea.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="hero">
+  
+
+  <div class="hero"> 
+    <div class="nav-links" id="navLinks">
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="">SUPPORT</a></li>
+      </ul>
+    </div>
     <a href="index.html"><img src="images/MonoSecurLogoWText.png"></a>
     <div class="form-box">
       <div class="button-box">
