--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <i class="fa-sharp fa-xmark" onclick="HideMenu()"></i>
         <ul>
           <li><a href="registration.html">S'identifier</a></li>
-          <li><a href="">SUPPORT</a></li>
+          <li><a href="error404.html">SUPPORT</a></li>
         </ul>
       </div>
       <i class="fa-sharp fa-bars" onclick="ShowMenu()"></i>
