--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="delay_time; URL=monosecur.epizy.com/public/index.php" />
   <title class="indextitle">MonoSecur</title>
   <link rel="stylesheet" href="CSStyle/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a7819a9eea.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <section class="header">
@@ -17,7 +19,7 @@
       <div class="nav-links" id="navLinks">
         <i class="fa-sharp fa-xmark" onclick="HideMenu()"></i>
         <ul>
-          <li><a href="registration.html">S'identifier</a></li>
+          <li><a href="public/register.php">S'identifier</a></li>
           <li><a href="error404.html">SUPPORT</a></li>
         </ul>
       </div>
@@ -32,6 +34,7 @@
 </div>
 
   </section>
+
 
 <!----Javascript for menu buttons---->
 <script>
