--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="delay_time; URL=monosecur.epizy.com/public/index.php" />
+  <meta http-equiv="refresh" content="1;url=http://www.redirect-location.com">
   <title class="indextitle">MonoSecur</title>
   <link rel="stylesheet" href="CSStyle/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
