--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title class="indextitle">LOADING..</title>
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="3;url=http://www.monosecur.tk/menu">
+    <meta http-equiv="refresh" content="3;url=https://monosecur.tk/menu_redirection">
     <link rel="stylesheet" href="CSStyle/error404.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
