--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 
 <head>
+  <script src="https://kit.fontawesome.com/a7819a9eea.js" crossorigin="anonymous"></script>
   <title class="indextitle">LOADING..</title>
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="3;url=https://monosecur.tk/menu_redirection">
-    <link rel="stylesheet" href="CSStyle/error404.css">
+    <link rel="stylesheet" href="CSStyle/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
@@ -14,7 +15,10 @@
 <body>
   <section class="header">
     <h1 class="text">WEBSITE IS LOADING PLEASE WAIT..</h1>
-    <a class="img"><img src="public/config/images/MonoSecurWebsiteSignature.png" alt=""></a>
+    <div class="img"><img src="https://monosecur.tk/images/MonoSecurWebsiteSignature.png"></div>
+    <div>
+      <i class="logo fa-solid fa-cog fa-10x fa-spin"></i>
+    </div>
   </section>
 
 </body>
