--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <section class="header">
     <h1 class="text">Oups.. vous êtes aller un peu trop loin !</h1>
   </section>
-  <a class="err-btn" href="https://monosecur.tk/menu_redirection">Retourner en lieu sûr</a>
+  <a class="err-btn" href="https://www.monosecur.tk/menu_redirection">Retourner en lieu sûr</a>
 
 </body>
 </html>
