--- a/registration.html
+++ b/registration.html
@@ -14,7 +14,7 @@
     <div class="nav-links" id="navLinks">
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="error404.html">SUPPORT</a></li>
+        <li><a href="https://discord.gg/d6rJNy4rad">SUPPORT</a></li>
       </ul>
     </div>
     <a href="index.html"><img src="images/MonoSecurLogoWText.png"></a>
